	* [worksheet] 
		* new visualization types:
			* Process Behavior Chart
			* Run Chart
		* more space for plots and less "ink" - no layout spacings, no minor grid lines, not plot borders, no ticks on secondary axes on default
		* allow to provide names for plot ranges for easier lookup and assignemnt in the plot elements

Bug fixes:
	* Fix crash selecting "cell" from function list in function dialog
	* Properly draw the border line of the symbol in the legend (BUG 491310)
	* Show Ticks on inverted axes (BUG 491502 & 492475)
	* Fixed add/subtract value functionality in Matrix (BUG 493523)
	* Fixed wrong font size in the plot legend (BUG 493017)

Internal:
	* use name LabPlot/labplot consistenly (renamed LabPlot2/labplot2)
	* switch to Qt6 only


-----2.11.1 (16.07.2024) -----
Bug fixes:
	* Improve ODS support (selected platforms only)
	* Fixed the initial positioninig of the docks, should be put besides each other and not below
	* Don't try to restore the window size when starting for the first time, let the window manager do the initial size
	* Don't crash when opening a project which a hidden spreadsheet view
	* Fixed the background color of the sparklines in the spreadsheet
	* Fixed copy&paste and duplication of the matrix


-----2.11.0 (09.07.2024) -----
New features:
	* [general]
		* New application theme "Dracula"
		* New categorical color map "Dracula"
		* New option in the application settings to run a selected CAS engine at startup
		* New option in the application settings to control if the state of the dock widgets should be saved in the project file
		* Share the project via email, Nextcloud, etc. directly from the main menu
		* Allow to activate and deactivate the debug and performance tracing output in the terminal in the application settings
	* [worksheet]
		* Preview panel for all available worksheets in the project
		* Add possibility to use column labels as axis ticks
		* New visualization types:
			* Lollipop plot
			* Q-Q plot
			* KDE plot