@@ -27,12 +27,16 @@ New features:
 		* more space for plots and less "ink" - no layout spacings, no minor grid lines, not plot borders, no ticks on secondary axes on default
 		* allow to provide names for plot ranges for easier lookup and assignemnt in the plot elements
 
+Performance improvements:
+	* Made big spreadsheet (millions of cells) more responsive when selecting columns via the spreadsheet header
+
 Bug fixes:
 	* Fix crash selecting "cell" from function list in function dialog
 	* Properly draw the border line of the symbol in the legend (BUG 491310)
 	* Show Ticks on inverted axes (BUG 491502 & 492475)
 	* Fixed add/subtract value functionality in Matrix (BUG 493523)
 	* Fixed wrong font size in the plot legend (BUG 493017)
+	* Fixed wrong font size in the axis title (BUG 472982)
 
 Internal:
 	* use name LabPlot/labplot consistenly (renamed LabPlot2/labplot2)
